fix: posicao dos elementos no right-align

--- a/3-Portfolio/pagina-react/src/App.css
+++ b/3-Portfolio/pagina-react/src/App.css
@@ -74,7 +74,6 @@ body{
 .right-align nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
 .right-align nav ul {
@@ -86,6 +85,7 @@ body{
   width: 111px;
   height: 22px;
   text-align: center;
+  margin-left: -60px;
 }
 
 .toggle-buttom{
@@ -104,7 +104,6 @@ body{
   font-weight: 400;
   line-height: 20.45px;
   text-align: left;
-
 }
 
 .switch {
@@ -112,6 +111,7 @@ body{
   display: inline-block;
   width: 40px;
   height: 22px;
+  
 }
 
 .switch input {
@@ -123,15 +123,14 @@ body{
 .slider {
   position: absolute;
   cursor: pointer;
-
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-
   background-color: #ccc;
   transition: 0.4s;
   border-radius: 36px;
+  border: 1px solid black;
 }
 
 .slider:before{
@@ -140,10 +139,11 @@ body{
   height: 16px;
   width: 16px;
   left: 3px;
-  bottom: 3.5px;
+  bottom: 1px;
   background-color: black;
   transition: 0.4s;
   border-radius: 35px;
+  border: 1px solid black;
 }
 
 input:checked + .slider:before{
